--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <header class="max-w-6xl w-full mx-auto flex justify-between items-center">
       <div>
-        <img class="w-44 p-1" src="./images/nt-logo.png" alt="logo" />
+        <a href="./">
+          <img class="w-44 p-1" src="./images/nt-logo.png" alt="logo" />
+        </a>
       </div>
 
       <div class="nav">
@@ -728,8 +730,8 @@
       </div>
     </section>
     <!-- provide section -->
-    <section class="bg-gradient-to-b from-teal-200">
-      <h2>Our Services</h2>
+    <section class="bg-gradient-to-b from-teal-200 max-w-6xl w-full mx-auto">
+      <h2 class="text-secondary-color text-2xl font-bold">OUR SERVICES</h2>
       <div>
         <h1>TOP VALUES FOR YOU</h1>
         <img src="" alt="" />
