--- a/index.html
+++ b/index.html
@@ -731,14 +731,16 @@
     </section>
     <!-- provide section -->
     <section class="bg-gradient-to-b from-teal-200 max-w-6xl w-full mx-auto">
-      <h2 class="text-secondary-color text-2xl font-bold">OUR SERVICES</h2>
-      <div>
+      <h2 class="text-secondary-color text-2xl font-bold mt-44">
+        OUR SERVICES
+      </h2>
+      <div class="flex items-center justify-center">
         <h1>TOP VALUES FOR YOU</h1>
-        <img src="" alt="" />
+        <img class="w-64" src="images/baloon.png" alt="" />
       </div>
       <div>
         <div>
-          <img src="" alt="" />
+          <img class="w-64" src="images/baloon.png" alt="" />
           <h3>Lots of Choices</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
@@ -748,7 +750,8 @@
           </p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img class="w-64" src="images/baloon.png" alt="" />
+
           <h3>Lots of Choices</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
@@ -758,7 +761,8 @@
           </p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img class="w-64" src="images/baloon.png" alt="" />
+
           <h3>Lots of Choices</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
