--- a/index.html
+++ b/index.html
@@ -48,38 +48,47 @@
     <!-- swiper slider -->
     <section>
       <div class="swiper mySwiper">
-        <div
+        <!-- <div
           class="parallax-bg"
           style="background-image: url(images/boat.jpg)"
           data-swiper-parallax="-23%"
-        ></div>
+        ></div> -->
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="text-container">
-              <div
-                class="title text-3xl font-bold text-primary-color"
-                data-swiper-parallax="-300"
-              >
-                New World Explore
+          <div class="swiper-slide flex items-center">
+            <div class="w-1/2">
+              <div class="text-container">
+                <div
+                  class="title text-3xl font-bold text-primary-color"
+                  data-swiper-parallax="-300"
+                >
+                  New World Explore
+                </div>
+                <div
+                  class="subtitle text-6xl font-bold max-w-lg my-5"
+                  data-swiper-parallax="-200"
+                >
+                  Finally a peaceful journey!
+                </div>
+                <div
+                  class="text text-2xl text-slate-300"
+                  data-swiper-parallax="-100"
+                >
+                  <p>Experience new nature</p>
+                </div>
               </div>
-              <div
-                class="subtitle text-6xl font-bold max-w-lg my-5"
-                data-swiper-parallax="-200"
+              <button
+                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
-                Finally a peaceful journey!
-              </div>
-              <div
-                class="text text-2xl text-slate-300"
-                data-swiper-parallax="-100"
-              >
-                <p>Experience new nature</p>
-              </div>
+                Explore Now
+              </button>
             </div>
-            <button
-              class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
-            >
-              Explore Now
-            </button>
+            <div class="w-1/2">
+              <img
+                class="w-full h-56 rounded-full"
+                src="images/boat.jpg"
+                alt=""
+              />
+            </div>
           </div>
           <div class="swiper-slide">
             <div class="text-container">
@@ -738,33 +747,11 @@
         <h1>TOP VALUES FOR YOU</h1>
         <img class="w-64" src="images/baloon.png" alt="" />
       </div>
-      <div>
-        <div>
+      <div class="flex flex-wrap justify-center">
+        <div class="">
           <img class="w-64" src="images/baloon.png" alt="" />
-          <h3>Lots of Choices</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-            laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
-            sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
-            dolorem aperiam nihil expedita!
-          </p>
-        </div>
-        <div>
-          <img class="w-64" src="images/baloon.png" alt="" />
-
-          <h3>Lots of Choices</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-            laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
-            sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
-            dolorem aperiam nihil expedita!
-          </p>
-        </div>
-        <div>
-          <img class="w-64" src="images/baloon.png" alt="" />
-
-          <h3>Lots of Choices</h3>
-          <p>
+          <h3 class="text-center font-bold text-2xl mb-5">Lots of Choices</h3>
+          <p class="w-64 text-center">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
             laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
             sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
