added svg; slider update

--- a/index.html
+++ b/index.html
@@ -48,32 +48,15 @@
     <!-- swiper slider -->
     <section>
       <div class="swiper mySwiper">
-        <!-- <div
-          class="parallax-bg"
-          style="background-image: url(images/boat.jpg)"
-          data-swiper-parallax="-23%"
-        ></div> -->
         <div class="swiper-wrapper">
           <div class="swiper-slide flex items-center">
-            <div class="w-1/2">
-              <div class="text-container">
-                <div
-                  class="title text-3xl font-bold text-primary-color"
-                  data-swiper-parallax="-300"
-                >
+            <div class="w-full sm:w-1/2 flex flex-col sm:block">
+              <div class="text-container text-center sm:text-left">
+                <div class="title text-3xl font-bold text-primary-color">
                   New World Explore
                 </div>
-                <div
-                  class="subtitle text-6xl font-bold max-w-lg my-5"
-                  data-swiper-parallax="-200"
-                >
-                  Finally a peaceful journey!
-                </div>
-                <div
-                  class="text text-2xl text-slate-300"
-                  data-swiper-parallax="-100"
-                >
-                  <p>Experience new nature</p>
+                <div class="subtitle text-6xl font-bold max-w-lg my-5">
+                  Final Journey to enjoy life!
                 </div>
               </div>
               <button
@@ -82,67 +65,61 @@
                 Explore Now
               </button>
             </div>
-            <div class="w-1/2">
+            <div class="w-full sm:w-1/2">
               <img
-                class="w-full h-56 rounded-full"
-                src="images/boat.jpg"
-                alt=""
+                class="w-[600px] h-[400px] hidden sm:block"
+                src="images/aircraft.svg"
+                alt="plane"
               />
             </div>
           </div>
-          <div class="swiper-slide">
-            <div class="text-container">
-              <div
-                class="title text-3xl font-bold text-primary-color"
-                data-swiper-parallax="-300"
-              >
-                New World Explore
+          <div class="swiper-slide flex items-center">
+            <div class="w-full sm:w-1/2 flex flex-col sm:block">
+              <div class="text-container text-center sm:text-left">
+                <div class="title text-3xl font-bold text-primary-color">
+                  Discover best life !
+                </div>
+                <div class="subtitle text-6xl font-bold max-w-lg my-5">
+                  Live without worry!
+                </div>
               </div>
-              <div
-                class="subtitle text-6xl font-bold max-w-lg my-5"
-                data-swiper-parallax="-200"
+              <button
+                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
-                Finally a peaceful journey!
-              </div>
-              <div
-                class="text text-2xl text-slate-300"
-                data-swiper-parallax="-100"
-              >
-                <p>Experience new nature</p>
-              </div>
+                Explore Now
+              </button>
             </div>
-            <button
-              class="text-white bg-primary-color hover:bg-orange-500 transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
-            >
-              Explore Now
-            </button>
+            <div class="w-full sm:w-1/2">
+              <img
+                class="w-[600px] h-[400px] hidden sm:block"
+                src="images/boat.svg"
+                alt="plane"
+              />
+            </div>
           </div>
-          <div class="swiper-slide">
-            <div class="text-container">
-              <div
-                class="title text-3xl font-bold text-primary-color"
-                data-swiper-parallax="-300"
-              >
-                New World Explore
+          <div class="swiper-slide flex items-center">
+            <div class="w-full sm:w-1/2 flex flex-col sm:block">
+              <div class="text-container text-center sm:text-left">
+                <div class="title text-3xl font-bold text-primary-color">
+                  Find new purpose
+                </div>
+                <div class="subtitle text-6xl font-bold max-w-lg my-5">
+                  Find happiness in life
+                </div>
               </div>
-              <div
-                class="subtitle text-6xl font-bold max-w-lg my-5"
-                data-swiper-parallax="-200"
+              <button
+                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
-                Finally a peaceful journey!
-              </div>
-              <div
-                class="text text-2xl text-slate-300"
-                data-swiper-parallax="-100"
-              >
-                <p>Experience new nature</p>
-              </div>
+                Explore Now
+              </button>
             </div>
-            <button
-              class="text-white bg-primary-color hover:bg-orange-500 transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
-            >
-              Explore Now
-            </button>
+            <div class="w-full sm:w-1/2">
+              <img
+                class="w-[600px] h-[400px] hidden sm:block"
+                src="images/suv.svg"
+                alt="plane"
+              />
+            </div>
           </div>
         </div>
         <div class="swiper-button-next"></div>
